# HiddenHand

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  SESSION_STATUS.md  package-lock.json  package.json
app/: next.config.ts  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: ActionPanel.tsx  ActionTimer.tsx  AuthorityTimeoutPanel.tsx  Card.tsx  ChipAnimation.tsx  ConfirmDialog.tsx  GameHistory.tsx  OnChainHandHistory.tsx  OpponentTimer.tsx  PlayerSeat.tsx  PokerTable.tsx  ProvablyFairBadge.tsx  ShowdownTimeoutPanel.tsx  SoundToggle.tsx  Tooltip.tsx  TransactionToast.tsx  WalletButton.tsx  WinCelebration.tsx
app/contexts/: WalletProvider.tsx
app/hooks/: useHandHistory.ts  usePokerGame.ts  usePokerProgram.ts
app/lib/: constants.ts  handEval.ts  inco.ts  magicblock.ts  program.ts  sounds.ts  utils.ts
app/lib/idl/: hiddenhand.json
app/public/sounds/: README.md
marketing/: MAGICBLOCK_BENEFITS.md  MAGICBLOCK_DEEP_DIVE.md  PITCH.md  TAGLINES.md
programs/hiddenhand/: Cargo.toml
programs/hiddenhand/src/: constants.rs  error.rs  events.rs  inco_cpi.rs  lib.rs
programs/hiddenhand/src/instructions/: callback_shuffle.rs  close_inactive_table.rs  create_table.rs  deal_cards.rs  deal_cards_encrypted.rs  deal_cards_vrf.rs  delegate_deck.rs  delegate_hand.rs  delegate_seat.rs  encrypt_hole_cards.rs  grant_community_allowances.rs  grant_own_allowance.rs  join_table.rs  leave_table.rs  mod.rs  player_action.rs  request_shuffle.rs  reveal_cards.rs  reveal_community.rs  showdown.rs  start_hand.rs  timeout_player.rs  timeout_reveal.rs  undelegate_deck.rs  undelegate_hand.rs  undelegate_seat.rs
programs/hiddenhand/src/state/: deck.rs  hand.rs  hand_eval.rs  mod.rs  player.rs  table.rs
programs/inco-er-test/: Cargo.toml
programs/inco-er-test/src/: lib.rs
programs/mb-test/: Cargo.toml
programs/mb-test/src/: lib.rs
scripts/: check-delegation.mjs  check-delegation.ts  test-encrypt-cards.mjs  test-inco-cpi.mjs  test-inco-from-er.mjs  test-poker-devnet.mjs  test-vrf-oracle.mjs  verify-shuffle-privacy.mjs
tests/: edge-cases.ts  game-mechanics.ts  hiddenhand.ts  mb-test.ts  vrf-integration.ts
thinking/: card-encryption-flow-explained.md  hybrid-architecture-plan.md  inco-fhe-vs-magicblock-analysis.md  where-tech-is-used.md
