[package]
name = "hiddenhand"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hiddenhand"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
# anchor-spl = "0.32.1" - temporarily disabled due to toolchain compatibility
# TODO: Add once Anchor toolchain supports edition2024
# inco-lightning = { version = "0.1.4", features = ["cpi"] }

# MagicBlock SDK for VRF (verifiable randomness) and Ephemeral Rollups (privacy)
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor", "disable-realloc"] }
ephemeral-vrf-sdk = { version = "0.2.1", features = ["anchor"] }
constant_time_eq = "=0.3.1"

# Note: LiteSVM requires solana-sdk version matching anchor-lang's requirements
# For now, we use standard Rust tests which don't need these dependencies
# TODO: Add LiteSVM once solana-sdk versions align with Anchor 0.32.1
# [dev-dependencies]
# litesvm = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
