[package]
name = "hiddenhand"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hiddenhand"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
# anchor-spl = "0.32.1" - temporarily disabled due to toolchain compatibility

# NOTE: We use manual CPI to Inco instead of inco-lightning SDK
# This avoids version conflicts (inco-lightning needs anchor 0.31.1)
# See src/inco_cpi.rs for the manual implementation

# MagicBlock VRF SDK for verifiable randomness (provably fair shuffling)
ephemeral-vrf-sdk = { version = "0.2.1", features = ["anchor"] }
constant_time_eq = "=0.3.1"

# SHA256 hashing for Ed25519 message verification
sha2 = "0.10"

# Note: LiteSVM requires solana-sdk version matching anchor-lang's requirements
# For now, we use standard Rust tests which don't need these dependencies
# TODO: Add LiteSVM once solana-sdk versions align with Anchor 0.32.1

[dev-dependencies]
aya_poker = "0.1.0" # Reference implementation for hand evaluation testing
rand = "0.8"        # Random number generation for fuzz testing

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
