[package]
name = "inco-er-test"
version = "0.1.0"
description = "Test program to verify Inco CPI works from MagicBlock ER"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "inco_er_test"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# Must match inco-lightning's anchor version (0.31.1)
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
inco-lightning = { version = "0.1.4", features = ["cpi"] }
# Note: ephemeral-rollups-sdk may also have version conflicts
# For now, let's test Inco CPI without delegation first
