[package]
name = "mb-test"
version = "0.1.0"
description = "MagicBlock integration test program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mb_test"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor", "disable-realloc"] }
ephemeral-vrf-sdk = { version = "0.2.1", features = ["anchor"] }

# Pin to avoid edition2024 issues with newer versions
constant_time_eq = "=0.3.1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
